@@ -1,5 +1,9 @@
 Changes in 1.8 (??.??.2011)
 
+ - CDummyTransformationSceneNode::clone() added.
+
+ - IParticleSystemSceneNode::doParticleSystem now public to allow rendering outside scenegraph. 
+
  - Renamed IOSOperator::getOperationSystemVersion to getOperatingSystemVersion. Changed return type from wchar_t to core::stringc, as that's the internal representation the name is built on.
 
  - Added IGUITabControl::insertTab, IGUITabControl::removeTab, IGUITabControl::clear and IGUITabControl::getTabAt
